# trii-technical-test

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/helpers/: ram.py
app/routers/search/: models.py  search.py
app/utilities/: logger.py
docs/: Trii Technical Test.postman_collection.json
